--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    time to deal damage
+    <p>Time to deal some damage <br>
+       *deals damage <br>
+       Thats a lot of damage
+
+    </p>
 </body>
 </html>
