--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <p>Time to deal some damage <br>
-       *deals damage <br>
+       <span id="dmg">*deals damage </span><br>
        Thats a lot of damage
 
     </p>
