--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Flex Seal</title>
 </head>
 <body>
+
     <p>Time to deal some damage <br>
        <span id="dmg">*deals damage </span><br>
-       Thats a lot of damage
+       T<span id="blc">hats a lot of damag</span>e
 
     </p>
+  
 </body>
 </html>
