--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
     <p>Time to deal some damage <br>
        <span id="dmg">*deals damage </span><br>
-       T<span id="blc">hats a lot of damag</span>e
+       Thats a lot of damage      
 
     </p>
   
+    <p id="cock">sohan er pp choto and samin ekta cuck</p>
 </body>
 </html>
