--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Time to deal some damage <br>
        <span id="dmg">*deals damage </span><br>
        Thats a lot of damage      
+    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">CLICK TO DEAL MORE DAMAGE</a>
 
     </p>
   
