changed some shit

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <p>Time to deal some damage <br>
        <span id="dmg">*deals damage </span><br>
        Thats a lot of damage      
-    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">CLICK TO DEAL MORE DAMAGE</a>
+    <p><a class="no" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">CLICK TO DEAL MORE DAMAGE</a>
 
     </p>
   
     <p id="cock">sohan er pp choto and samin ekta cuck</p>
+    <p id="smex">Not a spyware! <br> Flex Seal Approved Link!</p>
 </body>
 </html>
