--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <title>Flex Seal</title>
 </head>
@@ -16,6 +18,8 @@
     </p>
   
     <p id="cock">sohan er pp choto and samin ekta cuck</p>
-    <p id="smex">Not a spyware! <br> Flex Seal Approved Link!</p>
+    <p id="smex">Not a spyware! <br> Flex Seal Approved Link! </p>
+    
+    
 </body>
 </html>
